--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="root"></div>
-  </body>
-  <script src="dist/bundle.js"></script>
+  <script type="text/javascript" src="manifest.4df6823cd61ad852d39a.js"></script><script type="text/javascript" src="vendor.7f0c6b08b54fbd42d771.js"></script><script type="text/javascript" src="bundle.5d8ea7d7788824b5dfc3.js"></script></body>
+  <!-- <script src="dist/bundle.js"></script> -->
 </html>
